parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl program
Rule 2     program -> empty
Rule 3     empty -> <empty>
Rule 4     class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE
Rule 5     optionalExtendsId -> EXTENDS ID
Rule 6     optionalExtendsId -> empty
Rule 7     class_body_decl_plus -> class_body_decl
Rule 8     class_body_decl_plus -> class_body_decl class_body_decl_plus
Rule 9     class_body_decl -> field_decl
Rule 10    class_body_decl -> method_decl
Rule 11    class_body_decl -> constructor_decl
Rule 12    field_decl -> modifier var_decl
Rule 13    modifier -> public_private_zero_or_one static_zero_or_one
Rule 14    public_private_zero_or_one -> PUBLIC
Rule 15    public_private_zero_or_one -> PRIVATE
Rule 16    public_private_zero_or_one -> empty
Rule 17    static_zero_or_one -> STATIC
Rule 18    static_zero_or_one -> empty
Rule 19    var_decl -> type variables SEMI_COLON
Rule 20    type -> INT
Rule 21    type -> FLOAT
Rule 22    type -> BOOLEAN
Rule 23    type -> ID
Rule 24    variables -> variable additional_variables
Rule 25    additional_variables -> COMMA variable additional_variables
Rule 26    additional_variables -> empty
Rule 27    variable -> ID
Rule 28    method_decl -> modifier type ID L_PAREN zero_or_one_formals R_PAREN block
Rule 29    method_decl -> modifier VOID ID L_PAREN zero_or_one_formals R_PAREN block
Rule 30    zero_or_one_formals -> formals
Rule 31    zero_or_one_formals -> empty
Rule 32    constructor_decl -> modifier ID L_PAREN zero_or_one_formals R_PAREN block
Rule 33    formals -> formal_param additional_formal_params
Rule 34    additional_formal_params -> COMMA formal_param additional_formal_params
Rule 35    additional_formal_params -> empty
Rule 36    formal_param -> type variable
Rule 37    block -> L_CURLY_BRACE stmt_star R_CURLY_BRACE
Rule 38    stmt_star -> stmt stmt_star
Rule 39    stmt_star -> empty
Rule 40    stmt -> IF L_PAREN expr R_PAREN stmt zero_or_one_else_stmt
Rule 41    stmt -> WHILE L_PAREN expr R_PAREN stmt
Rule 42    stmt -> FOR L_PAREN zero_or_one_stmt_expr SEMI_COLON zero_or_one_expr SEMI_COLON zero_or_one_stmt_expr R_PAREN stmt
Rule 43    stmt -> RETURN zero_or_one_expr SEMI_COLON
Rule 44    stmt -> stmt_expr SEMI_COLON
Rule 45    stmt -> BREAK SEMI_COLON
Rule 46    stmt -> CONTINUE SEMI_COLON
Rule 47    stmt -> block
Rule 48    stmt -> var_decl
Rule 49    stmt -> SEMI_COLON
Rule 50    zero_or_one_else_stmt -> ELSE stmt
Rule 51    zero_or_one_else_stmt -> empty
Rule 52    zero_or_one_stmt_expr -> stmt_expr
Rule 53    zero_or_one_stmt_expr -> empty
Rule 54    zero_or_one_expr -> expr
Rule 55    zero_or_one_expr -> empty
Rule 56    literal -> INT_CONST
Rule 57    literal -> FLOAT_CONST
Rule 58    literal -> STRING_CONST
Rule 59    literal -> NULL
Rule 60    literal -> TRUE
Rule 61    literal -> FALSE
Rule 62    primary -> literal
Rule 63    primary -> THIS
Rule 64    primary -> SUPER
Rule 65    primary -> L_PAREN expr R_PAREN
Rule 66    primary -> NEW ID L_PAREN zero_or_one_arguments R_PAREN
Rule 67    primary -> lhs
Rule 68    primary -> method_invocation
Rule 69    zero_or_one_arguments -> arguments
Rule 70    zero_or_one_arguments -> empty
Rule 71    arguments -> expr additional_expr
Rule 72    additional_expr -> COMMA expr additional_expr
Rule 73    additional_expr -> empty
Rule 74    lhs -> field_access
Rule 75    field_access -> primary DOT ID
Rule 76    field_access -> ID
Rule 77    method_invocation -> field_access L_PAREN zero_or_one_arguments R_PAREN
Rule 78    expr -> primary
Rule 79    expr -> assign
Rule 80    expr -> expr arith_op expr
Rule 81    expr -> expr bool_op expr
Rule 82    expr -> unary_op expr
Rule 83    assign -> lhs ASSIGNMENT_OP expr
Rule 84    assign -> lhs INCR_OP
Rule 85    assign -> INCR_OP lhs
Rule 86    assign -> lhs DECR_OP
Rule 87    assign -> DECR_OP lhs
Rule 88    arith_op -> PLUS
Rule 89    arith_op -> MINUS
Rule 90    arith_op -> TIMES
Rule 91    arith_op -> DIVIDE
Rule 92    bool_op -> LOGICAL_AND_OP
Rule 93    bool_op -> LOGICAL_OR_OP
Rule 94    bool_op -> EQUALITY_OP
Rule 95    bool_op -> DISEQUALITY_OP
Rule 96    bool_op -> L_THAN_OP
Rule 97    bool_op -> G_THAN_OP
Rule 98    bool_op -> L_THAN_EQUAL_TO_OP
Rule 99    bool_op -> G_THAN_EQUAL_TO_OP
Rule 100   unary_op -> PLUS
Rule 101   unary_op -> MINUS
Rule 102   unary_op -> NEG_OP
Rule 103   stmt_expr -> assign
Rule 104   stmt_expr -> method_invocation

Terminals, with rules where they appear

ASSIGNMENT_OP        : 83
BOOLEAN              : 22
BREAK                : 45
CLASS                : 4
COMMA                : 25 34 72
CONTINUE             : 46
DECR_OP              : 86 87
DISEQUALITY_OP       : 95
DIVIDE               : 91
DOT                  : 75
ELSE                 : 50
EQUALITY_OP          : 94
EXTENDS              : 5
FALSE                : 61
FLOAT                : 21
FLOAT_CONST          : 57
FOR                  : 42
G_THAN_EQUAL_TO_OP   : 99
G_THAN_OP            : 97
ID                   : 4 5 23 27 28 29 32 66 75 76
IF                   : 40
INCR_OP              : 84 85
INT                  : 20
INT_CONST            : 56
LOGICAL_AND_OP       : 92
LOGICAL_OR_OP        : 93
L_CURLY_BRACE        : 4 37
L_PAREN              : 28 29 32 40 41 42 65 66 77
L_THAN_EQUAL_TO_OP   : 98
L_THAN_OP            : 96
MINUS                : 89 101
NEG_OP               : 102
NEW                  : 66
NULL                 : 59
PLUS                 : 88 100
PRIVATE              : 15
PUBLIC               : 14
RETURN               : 43
R_CURLY_BRACE        : 4 37
R_PAREN              : 28 29 32 40 41 42 65 66 77
SEMI_COLON           : 19 42 42 43 44 45 46 49
STATIC               : 17
STRING_CONST         : 58
SUPER                : 64
THIS                 : 63
TIMES                : 90
TRUE                 : 60
VOID                 : 29
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

additional_expr      : 71 72
additional_formal_params : 33 34
additional_variables : 24 25
arguments            : 69
arith_op             : 80
assign               : 79 103
block                : 28 29 32 47
bool_op              : 81
class_body_decl      : 7 8
class_body_decl_plus : 4 8
class_decl           : 1
constructor_decl     : 11
empty                : 2 6 16 18 26 31 35 39 51 53 55 70 73
expr                 : 40 41 54 65 71 72 80 80 81 81 82 83
field_access         : 74 77
field_decl           : 9
formal_param         : 33 34
formals              : 30
lhs                  : 67 83 84 85 86 87
literal              : 62
method_decl          : 10
method_invocation    : 68 104
modifier             : 12 28 29 32
optionalExtendsId    : 4
primary              : 75 78
program              : 1 0
public_private_zero_or_one : 13
static_zero_or_one   : 13
stmt                 : 38 40 41 42 50
stmt_expr            : 44 52
stmt_star            : 37 38
type                 : 19 28 36
unary_op             : 82
var_decl             : 12 48
variable             : 24 25 36
variables            : 19
zero_or_one_arguments : 66 77
zero_or_one_else_stmt : 40
zero_or_one_expr     : 42 43
zero_or_one_formals  : 28 29 32
zero_or_one_stmt_expr : 42 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (4) class_decl -> . CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE
    (3) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 3 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (4) class_decl -> . CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE
    (3) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 3 (empty -> .)

    class_decl                     shift and go to state 2
    program                        shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) class_decl -> CLASS . ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE

    ID              shift and go to state 6


state 5

    (1) program -> class_decl program .

    $end            reduce using rule 1 (program -> class_decl program .)


state 6

    (4) class_decl -> CLASS ID . optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE
    (5) optionalExtendsId -> . EXTENDS ID
    (6) optionalExtendsId -> . empty
    (3) empty -> .

    EXTENDS         shift and go to state 8
    L_CURLY_BRACE   reduce using rule 3 (empty -> .)

    optionalExtendsId              shift and go to state 7
    empty                          shift and go to state 9

state 7

    (4) class_decl -> CLASS ID optionalExtendsId . L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE

    L_CURLY_BRACE   shift and go to state 10


state 8

    (5) optionalExtendsId -> EXTENDS . ID

    ID              shift and go to state 11


state 9

    (6) optionalExtendsId -> empty .

    L_CURLY_BRACE   reduce using rule 6 (optionalExtendsId -> empty .)


state 10

    (4) class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE . class_body_decl_plus R_CURLY_BRACE
    (7) class_body_decl_plus -> . class_body_decl
    (8) class_body_decl_plus -> . class_body_decl class_body_decl_plus
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID L_PAREN zero_or_one_formals R_PAREN block
    (29) method_decl -> . modifier VOID ID L_PAREN zero_or_one_formals R_PAREN block
    (32) constructor_decl -> . modifier ID L_PAREN zero_or_one_formals R_PAREN block
    (13) modifier -> . public_private_zero_or_one static_zero_or_one
    (14) public_private_zero_or_one -> . PUBLIC
    (15) public_private_zero_or_one -> . PRIVATE
    (16) public_private_zero_or_one -> . empty
    (3) empty -> .

    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          reduce using rule 3 (empty -> .)
    VOID            reduce using rule 3 (empty -> .)
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)

    class_body_decl_plus           shift and go to state 12
    class_body_decl                shift and go to state 13
    field_decl                     shift and go to state 14
    method_decl                    shift and go to state 15
    constructor_decl               shift and go to state 16
    modifier                       shift and go to state 17
    public_private_zero_or_one     shift and go to state 18
    empty                          shift and go to state 21

state 11

    (5) optionalExtendsId -> EXTENDS ID .

    L_CURLY_BRACE   reduce using rule 5 (optionalExtendsId -> EXTENDS ID .)


state 12

    (4) class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus . R_CURLY_BRACE

    R_CURLY_BRACE   shift and go to state 22


state 13

    (7) class_body_decl_plus -> class_body_decl .
    (8) class_body_decl_plus -> class_body_decl . class_body_decl_plus
    (7) class_body_decl_plus -> . class_body_decl
    (8) class_body_decl_plus -> . class_body_decl class_body_decl_plus
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID L_PAREN zero_or_one_formals R_PAREN block
    (29) method_decl -> . modifier VOID ID L_PAREN zero_or_one_formals R_PAREN block
    (32) constructor_decl -> . modifier ID L_PAREN zero_or_one_formals R_PAREN block
    (13) modifier -> . public_private_zero_or_one static_zero_or_one
    (14) public_private_zero_or_one -> . PUBLIC
    (15) public_private_zero_or_one -> . PRIVATE
    (16) public_private_zero_or_one -> . empty
    (3) empty -> .

    R_CURLY_BRACE   reduce using rule 7 (class_body_decl_plus -> class_body_decl .)
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          reduce using rule 3 (empty -> .)
    VOID            reduce using rule 3 (empty -> .)
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)

    class_body_decl                shift and go to state 13
    class_body_decl_plus           shift and go to state 23
    field_decl                     shift and go to state 14
    method_decl                    shift and go to state 15
    constructor_decl               shift and go to state 16
    modifier                       shift and go to state 17
    public_private_zero_or_one     shift and go to state 18
    empty                          shift and go to state 21

state 14

    (9) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 9 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> field_decl .)
    VOID            reduce using rule 9 (class_body_decl -> field_decl .)
    ID              reduce using rule 9 (class_body_decl -> field_decl .)
    INT             reduce using rule 9 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> field_decl .)
    R_CURLY_BRACE   reduce using rule 9 (class_body_decl -> field_decl .)


state 15

    (10) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 10 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> method_decl .)
    VOID            reduce using rule 10 (class_body_decl -> method_decl .)
    ID              reduce using rule 10 (class_body_decl -> method_decl .)
    INT             reduce using rule 10 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> method_decl .)
    R_CURLY_BRACE   reduce using rule 10 (class_body_decl -> method_decl .)


state 16

    (11) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 11 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 11 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 11 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    R_CURLY_BRACE   reduce using rule 11 (class_body_decl -> constructor_decl .)


state 17

    (12) field_decl -> modifier . var_decl
    (28) method_decl -> modifier . type ID L_PAREN zero_or_one_formals R_PAREN block
    (29) method_decl -> modifier . VOID ID L_PAREN zero_or_one_formals R_PAREN block
    (32) constructor_decl -> modifier . ID L_PAREN zero_or_one_formals R_PAREN block
    (19) var_decl -> . type variables SEMI_COLON
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    VOID            shift and go to state 27
    ID              shift and go to state 26
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30

    var_decl                       shift and go to state 24
    type                           shift and go to state 25

state 18

    (13) modifier -> public_private_zero_or_one . static_zero_or_one
    (17) static_zero_or_one -> . STATIC
    (18) static_zero_or_one -> . empty
    (3) empty -> .

    STATIC          shift and go to state 32
    VOID            reduce using rule 3 (empty -> .)
    ID              reduce using rule 3 (empty -> .)
    INT             reduce using rule 3 (empty -> .)
    FLOAT           reduce using rule 3 (empty -> .)
    BOOLEAN         reduce using rule 3 (empty -> .)

    static_zero_or_one             shift and go to state 31
    empty                          shift and go to state 33

state 19

    (14) public_private_zero_or_one -> PUBLIC .

    STATIC          reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)
    VOID            reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)
    ID              reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)
    INT             reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)
    FLOAT           reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)
    BOOLEAN         reduce using rule 14 (public_private_zero_or_one -> PUBLIC .)


state 20

    (15) public_private_zero_or_one -> PRIVATE .

    STATIC          reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)
    VOID            reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)
    ID              reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)
    INT             reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)
    FLOAT           reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)
    BOOLEAN         reduce using rule 15 (public_private_zero_or_one -> PRIVATE .)


state 21

    (16) public_private_zero_or_one -> empty .

    STATIC          reduce using rule 16 (public_private_zero_or_one -> empty .)
    VOID            reduce using rule 16 (public_private_zero_or_one -> empty .)
    ID              reduce using rule 16 (public_private_zero_or_one -> empty .)
    INT             reduce using rule 16 (public_private_zero_or_one -> empty .)
    FLOAT           reduce using rule 16 (public_private_zero_or_one -> empty .)
    BOOLEAN         reduce using rule 16 (public_private_zero_or_one -> empty .)


state 22

    (4) class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE .)
    $end            reduce using rule 4 (class_decl -> CLASS ID optionalExtendsId L_CURLY_BRACE class_body_decl_plus R_CURLY_BRACE .)


state 23

    (8) class_body_decl_plus -> class_body_decl class_body_decl_plus .

    R_CURLY_BRACE   reduce using rule 8 (class_body_decl_plus -> class_body_decl class_body_decl_plus .)


state 24

    (12) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 12 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 12 (field_decl -> modifier var_decl .)
    ID              reduce using rule 12 (field_decl -> modifier var_decl .)
    INT             reduce using rule 12 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 12 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 12 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    R_CURLY_BRACE   reduce using rule 12 (field_decl -> modifier var_decl .)


state 25

    (28) method_decl -> modifier type . ID L_PAREN zero_or_one_formals R_PAREN block
    (19) var_decl -> type . variables SEMI_COLON
    (24) variables -> . variable additional_variables
    (27) variable -> . ID

    ID              shift and go to state 34

    variables                      shift and go to state 35
    variable                       shift and go to state 36

state 26

    (32) constructor_decl -> modifier ID . L_PAREN zero_or_one_formals R_PAREN block
    (23) type -> ID .

    L_PAREN         shift and go to state 37
    ID              reduce using rule 23 (type -> ID .)


state 27

    (29) method_decl -> modifier VOID . ID L_PAREN zero_or_one_formals R_PAREN block

    ID              shift and go to state 38


state 28

    (20) type -> INT .

    ID              reduce using rule 20 (type -> INT .)


state 29

    (21) type -> FLOAT .

    ID              reduce using rule 21 (type -> FLOAT .)


state 30

    (22) type -> BOOLEAN .

    ID              reduce using rule 22 (type -> BOOLEAN .)


state 31

    (13) modifier -> public_private_zero_or_one static_zero_or_one .

    VOID            reduce using rule 13 (modifier -> public_private_zero_or_one static_zero_or_one .)
    ID              reduce using rule 13 (modifier -> public_private_zero_or_one static_zero_or_one .)
    INT             reduce using rule 13 (modifier -> public_private_zero_or_one static_zero_or_one .)
    FLOAT           reduce using rule 13 (modifier -> public_private_zero_or_one static_zero_or_one .)
    BOOLEAN         reduce using rule 13 (modifier -> public_private_zero_or_one static_zero_or_one .)


state 32

    (17) static_zero_or_one -> STATIC .

    VOID            reduce using rule 17 (static_zero_or_one -> STATIC .)
    ID              reduce using rule 17 (static_zero_or_one -> STATIC .)
    INT             reduce using rule 17 (static_zero_or_one -> STATIC .)
    FLOAT           reduce using rule 17 (static_zero_or_one -> STATIC .)
    BOOLEAN         reduce using rule 17 (static_zero_or_one -> STATIC .)


state 33

    (18) static_zero_or_one -> empty .

    VOID            reduce using rule 18 (static_zero_or_one -> empty .)
    ID              reduce using rule 18 (static_zero_or_one -> empty .)
    INT             reduce using rule 18 (static_zero_or_one -> empty .)
    FLOAT           reduce using rule 18 (static_zero_or_one -> empty .)
    BOOLEAN         reduce using rule 18 (static_zero_or_one -> empty .)


state 34

    (28) method_decl -> modifier type ID . L_PAREN zero_or_one_formals R_PAREN block
    (27) variable -> ID .

    L_PAREN         shift and go to state 39
    COMMA           reduce using rule 27 (variable -> ID .)
    SEMI_COLON      reduce using rule 27 (variable -> ID .)


state 35

    (19) var_decl -> type variables . SEMI_COLON

    SEMI_COLON      shift and go to state 40


state 36

    (24) variables -> variable . additional_variables
    (25) additional_variables -> . COMMA variable additional_variables
    (26) additional_variables -> . empty
    (3) empty -> .

    COMMA           shift and go to state 42
    SEMI_COLON      reduce using rule 3 (empty -> .)

    additional_variables           shift and go to state 41
    empty                          shift and go to state 43

state 37

    (32) constructor_decl -> modifier ID L_PAREN . zero_or_one_formals R_PAREN block
    (30) zero_or_one_formals -> . formals
    (31) zero_or_one_formals -> . empty
    (33) formals -> . formal_param additional_formal_params
    (3) empty -> .
    (36) formal_param -> . type variable
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    R_PAREN         reduce using rule 3 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    ID              shift and go to state 44

    zero_or_one_formals            shift and go to state 45
    formals                        shift and go to state 46
    empty                          shift and go to state 47
    formal_param                   shift and go to state 48
    type                           shift and go to state 49

state 38

    (29) method_decl -> modifier VOID ID . L_PAREN zero_or_one_formals R_PAREN block

    L_PAREN         shift and go to state 50


state 39

    (28) method_decl -> modifier type ID L_PAREN . zero_or_one_formals R_PAREN block
    (30) zero_or_one_formals -> . formals
    (31) zero_or_one_formals -> . empty
    (33) formals -> . formal_param additional_formal_params
    (3) empty -> .
    (36) formal_param -> . type variable
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    R_PAREN         reduce using rule 3 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    ID              shift and go to state 44

    type                           shift and go to state 49
    zero_or_one_formals            shift and go to state 51
    formals                        shift and go to state 46
    empty                          shift and go to state 47
    formal_param                   shift and go to state 48

state 40

    (19) var_decl -> type variables SEMI_COLON .

    PUBLIC          reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    PRIVATE         reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    VOID            reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    ID              reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    INT             reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    FLOAT           reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    BOOLEAN         reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    STATIC          reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    R_CURLY_BRACE   reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    IF              reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    WHILE           reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    FOR             reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    RETURN          reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    BREAK           reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    CONTINUE        reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    SEMI_COLON      reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    L_CURLY_BRACE   reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    INCR_OP         reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    DECR_OP         reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    THIS            reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    SUPER           reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    L_PAREN         reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    NEW             reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    INT_CONST       reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    FLOAT_CONST     reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    STRING_CONST    reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    NULL            reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    TRUE            reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    FALSE           reduce using rule 19 (var_decl -> type variables SEMI_COLON .)
    ELSE            reduce using rule 19 (var_decl -> type variables SEMI_COLON .)


state 41

    (24) variables -> variable additional_variables .

    SEMI_COLON      reduce using rule 24 (variables -> variable additional_variables .)


state 42

    (25) additional_variables -> COMMA . variable additional_variables
    (27) variable -> . ID

    ID              shift and go to state 53

    variable                       shift and go to state 52

state 43

    (26) additional_variables -> empty .

    SEMI_COLON      reduce using rule 26 (additional_variables -> empty .)


state 44
